objects/TLG_Json_Interface_Mapping__mdt.object
<CustomObject>
    <label>TLG Json Interface Mapping</label>
    <pluralLabel>TLG Json Interface Mappings</pluralLabel>
    <fields>
        <fullName>Is_Unique__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Unique</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Source_Field__c</fullName>
        <label>Source Field</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Field__c</fullName>
        <label>Target Field</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duplicate_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Duplicate Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hardcoded_Value__c</fullName>
        <label>Hardcoded Value</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Translation_Object__c</fullName>
        <label>Translation Object</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Json_Interface_Name__c</fullName>
        <label>Json Interface Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Translation_Value_Field__c</fullName>
        <label>Translation Value Field</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trnaslation_Match_Field__c</fullName>
        <label>Trnaslation Match Field</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duplicate_Check_Condition__c</fullName>
        <label>Duplicate Check Condition</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AND</fullName>
                    <default>true</default>
                    <label>AND</label>
                </value>
                <value>
                    <fullName>OR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>